Don't hack: fixes Security Manager issue in Java 18+